--- a/index.html
+++ b/index.html
@@ -28,13 +28,12 @@
 					</div>
 					<div class="about-text">
 						<p>
-							我是一名充满激情的开发者，专注于创造优秀的用户体验和解决方案。
+							我是一名前端开发者，线上是一个不折不扣的打工人，线下是一个热衷于前端技术的研究者。
 						</p>
 						<p>技能领域：</p>
 						<ul class="skills-list">
 							<li>前端开发</li>
 							<li>后端开发</li>
-							<li>UI/UX设计</li>
 							<li>项目管理</li>
 						</ul>
 					</div>
@@ -46,29 +45,84 @@
 				<div class="projects-grid">
 					<div class="project-card">
 						<div class="project-image"></div>
-						<h3>项目一</h3>
-						<p>这是一个创新性的项目，展示了独特的解决方案。</p>
+						<h3>knowledge-base</h3>
+						<p>
+							这是一个个人知识库平台，记录了前端的相关知识点。同时配套了一些开源的项目，可以让你快速上手企业级项目；
+						</p>
 						<div class="project-tags">
-							<span>React</span>
-							<span>Node.js</span>
+							<span>Vitepress</span>
+							<span>Vue.js</span>
 						</div>
 					</div>
 					<div class="project-card">
 						<div class="project-image"></div>
-						<h3>项目二</h3>
-						<p>一个富有挑战性的项目，展现了技术实力。</p>
+						<h3>sim-admin</h3>
+						<p>
+							这是一个简单易上手的后台管理系统，可以帮助你快速搭建一个后台管理系统。采用了最新的前端技术栈；
+						</p>
 						<div class="project-tags">
 							<span>Vue.js</span>
-							<span>Python</span>
+							<span>Rsbuild</span>
+							<span>Typescript</span>
 						</div>
 					</div>
 					<div class="project-card">
 						<div class="project-image"></div>
-						<h3>项目三</h3>
-						<p>展示了优秀的用户体验设计。</p>
+						<h3>web-demos</h3>
+						<p>这是一个简单的前端案例展示平台，积累了一些前端案例。</p>
 						<div class="project-tags">
-							<span>UI/UX</span>
-							<span>Figma</span>
+							<span>Javascript</span>
+							<span>Three.js</span>
+						</div>
+					</div>
+
+					<div class="project-card">
+						<div class="project-image"></div>
+						<h3>dev-tools</h3>
+						<p>
+							这是一个可视化的Node版本控制工具，
+							可以有效的控制Node版本，当然还可以控制全局依赖。
+						</p>
+						<div class="project-tags">
+							<span>Tauri</span>
+							<span>Rust</span>
+							<span>Vue.js</span>
+						</div>
+					</div>
+
+					<div class="project-card">
+						<div class="project-image"></div>
+						<h3>HarmonyOs-App</h3>
+						<p>
+							这是一个简单学习的HarmonyOs-App，当然这个项目仅仅是熟悉了一下布局，并没有做任何实际的功能。
+						</p>
+						<div class="project-tags">
+							<span>HarmonyOs</span>
+						</div>
+					</div>
+
+					<div class="project-card">
+						<div class="project-image"></div>
+						<h3>functional-helpers-lib</h3>
+						<p>
+							这是一个依赖于
+							sim-admin的函数辅助工具，内置了一些常用的hooks,utils等；
+						</p>
+						<div class="project-tags">
+							<span>Vite</span>
+							<span>Typescript</span>
+						</div>
+					</div>
+
+					<div class="project-card">
+						<div class="project-image"></div>
+						<h3>log-reporting</h3>
+						<p>
+							这个一个用于捕获前端异常的日志上报服务工具，可以帮助你快速定位问题。
+						</p>
+						<div class="project-tags">
+							<span>Typescript</span>
+							<span>Rollup</span>
 						</div>
 					</div>
 				</div>
@@ -77,13 +131,16 @@
 			<section class="contact" id="contact">
 				<h2>联系我</h2>
 				<div class="contact-content">
-					<a href="mailto:your.email@example.com" class="contact-link">Email</a>
-					<a href="https://github.com/" target="_blank" class="contact-link"
-						>GitHub</a
+					<a href="mailto:wangxiaoze9949@gmail.com" class="contact-link">
+						Email
+					</a>
+					<a
+						href="https://github.com/wangxiaoze-view"
+						target="_blank"
+						class="contact-link"
 					>
-					<a href="https://linkedin.com/" target="_blank" class="contact-link"
-						>LinkedIn</a
-					>
+						GitHub
+					</a>
 				</div>
 			</section>
 		</div>
