--- a/index.html
+++ b/index.html
@@ -31,6 +31,78 @@
 							我是一名前端开发者，线上是一个不折不扣的打工人，线下是一个热衷于前端技术的研究者。
 						</p>
 						<p>技能领域：</p>
+
+						<p>
+							<img
+								src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white"
+								alt=""
+							/>
+							<img
+								src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white"
+								alt=""
+							/>
+							<img
+								src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=white"
+								alt=""
+							/>
+							<img
+								src="https://img.shields.io/badge/TypeScript-007ACC?style=for-the-badge&logo=typescript&logoColor=white"
+								alt=""
+							/>
+							<img
+								src="https://img.shields.io/badge/Vue.js-35495E?style=for-the-badge&logo=vue.js&logoColor=4FC08D"
+								alt=""
+							/>
+							<img
+								src="https://img.shields.io/badge/Webpack-8DD6F9?style=for-the-badge&logo=Webpack&logoColor=white"
+								alt=""
+							/>
+							<img
+								src="https://img.shields.io/badge/Vite-B73BFE?style=for-the-badge&logo=vite&logoColor=FFD62E"
+								alt=""
+							/>
+							<img
+								src="https://img.shields.io/badge/Sass-CC6699?style=for-the-badge&logo=sass&logoColor=white"
+								alt=""
+							/>
+							<img
+								src="https://img.shields.io/badge/npm-CB3837?style=for-the-badge&logo=npm&logoColor=white"
+								alt=""
+							/>
+
+							<img
+								src="https://img.shields.io/badge/nestjs-E0234E?style=for-the-badge&logo=nestjs&logoColor=white"
+								alt=""
+							/>
+							<img
+								src="https://img.shields.io/badge/MongoDB-4EA94B?style=for-the-badge&logo=mongodb&logoColor=white"
+								alt=""
+							/>
+							<img
+								src="https://img.shields.io/badge/Jenkins-D24939?style=for-the-badge&logo=Jenkins&logoColor=white"
+								alt=""
+							/>
+							<img
+								src="https://img.shields.io/badge/Node.js-43853D?style=for-the-badge&logo=node.js&logoColor=white"
+								alt=""
+							/>
+
+							<img
+								src="https://img.shields.io/badge/Vercel-000000?style=for-the-badge&logo=vercel&logoColor=white"
+								alt=""
+							/>
+
+							<img
+								src="https://img.shields.io/badge/GIT-E44C30?style=for-the-badge&logo=git&logoColor=white"
+								alt=""
+							/>
+
+							<img
+								src="https://img.shields.io/badge/Docker-2CA5E0?style=for-the-badge&logo=docker&logoColor=white"
+								alt=""
+							/>
+						</p>
+
 						<ul class="skills-list">
 							<li>前端开发</li>
 							<li>后端开发</li>
