--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
 				<div class="about-content">
 					<div class="profile-img">
 						<!-- 这里可以放置你的照片 -->
-						<div class="profile-placeholder"></div>
+						<div class="profile-placeholder">
+							<img
+								src="https://www.wangzevw.com/cdn-file/images/WechatIMG646.2h8d1aigma.webp"
+								alt=""
+							/>
+						</div>
 					</div>
 					<div class="about-text">
 						<p>
@@ -116,86 +121,128 @@
 				<h2>项目展示</h2>
 				<div class="projects-grid">
 					<div class="project-card">
-						<div class="project-image"></div>
-						<h3>knowledge-base</h3>
-						<p>
-							这是一个个人知识库平台，记录了前端的相关知识点。同时配套了一些开源的项目，可以让你快速上手企业级项目；
-						</p>
-						<div class="project-tags">
-							<span>Vitepress</span>
-							<span>Vue.js</span>
-						</div>
+						<a href="https://wangzevw.com/knowledge-base/">
+							<div class="project-image">
+								<img
+									src="https://wangzevw.com/cdn-file/images/image.77dlzp13h8.webp"
+									alt=""
+								/>
+							</div>
+							<h3>knowledge-base</h3>
+							<p>
+								这是一个个人知识库平台，记录了前端的相关知识点。同时配套了一些开源的项目，可以让你快速上手企业级项目；
+							</p>
+							<div class="project-tags">
+								<span>Vitepress</span>
+								<span>Vue.js</span>
+							</div>
+						</a>
 					</div>
 					<div class="project-card">
-						<div class="project-image"></div>
-						<h3>sim-admin</h3>
-						<p>
-							这是一个简单易上手的后台管理系统，可以帮助你快速搭建一个后台管理系统。采用了最新的前端技术栈；
-						</p>
-						<div class="project-tags">
-							<span>Vue.js</span>
-							<span>Rsbuild</span>
-							<span>Typescript</span>
-						</div>
+						<a href="https://www.wangzevw.com/sim-admin">
+							<div class="project-image">
+								<img
+									src="https://www.wangzevw.com/cdn-file/images/sim_admin.2kryz063px.webp"
+									alt=""
+								/>
+							</div>
+							<h3>sim-admin</h3>
+							<p>
+								这是一个简单易上手的后台管理系统，可以帮助你快速搭建一个后台管理系统。采用了最新的前端技术栈；
+							</p>
+							<div class="project-tags">
+								<span>Vue.js</span>
+								<span>Rsbuild</span>
+								<span>Typescript</span>
+							</div>
+						</a>
 					</div>
 					<div class="project-card">
-						<div class="project-image"></div>
-						<h3>web-demos</h3>
-						<p>这是一个简单的前端案例展示平台，积累了一些前端案例。</p>
-						<div class="project-tags">
-							<span>Javascript</span>
-							<span>Three.js</span>
-						</div>
-					</div>
-
-					<div class="project-card">
-						<div class="project-image"></div>
-						<h3>dev-tools</h3>
-						<p>
-							这是一个可视化的Node版本控制工具，
-							可以有效的控制Node版本，当然还可以控制全局依赖。
-						</p>
-						<div class="project-tags">
-							<span>Tauri</span>
-							<span>Rust</span>
-							<span>Vue.js</span>
-						</div>
-					</div>
-
-					<div class="project-card">
-						<div class="project-image"></div>
-						<h3>HarmonyOs-App</h3>
-						<p>
-							这是一个简单学习的HarmonyOs-App，当然这个项目仅仅是熟悉了一下布局，并没有做任何实际的功能。
-						</p>
-						<div class="project-tags">
-							<span>HarmonyOs</span>
-						</div>
+						<a href="https://wangzevw.com/web-demos">
+							<div class="project-image">
+								<img
+									src="https://wangzevw.com/cdn-file/images/image.4ckxtwnq52.webp"
+									alt=""
+								/>
+							</div>
+							<h3>web-demos</h3>
+							<p>这是一个简单的前端案例展示平台，积累了一些前端案例。</p>
+							<div class="project-tags">
+								<span>Javascript</span>
+								<span>Three.js</span>
+							</div>
+						</a>
 					</div>
 
 					<div class="project-card">
-						<div class="project-image"></div>
-						<h3>functional-helpers-lib</h3>
-						<p>
-							这是一个依赖于
-							sim-admin的函数辅助工具，内置了一些常用的hooks,utils等；
-						</p>
-						<div class="project-tags">
-							<span>Vite</span>
-							<span>Typescript</span>
-						</div>
+						<a
+							href="https://wangxiaoze-view.github.io/knowledge-base/project/04_%E6%A1%8C%E9%9D%A2%E7%AB%AF%E5%BC%80%E5%8F%91%E5%B7%A5%E5%85%B7/01_%E9%A1%B9%E7%9B%AE%E4%BB%8B%E7%BB%8D.html"
+							target="_blank"
+						>
+							<div class="project-image">
+								<img
+									src="https://www.wangzevw.com/cdn-file/images/image.4n7llvv3zq.webp"
+									alt=""
+								/>
+							</div>
+							<h3>dev-tools</h3>
+							<p>
+								这是一个可视化的Node版本控制工具，
+								可以有效的控制Node版本，当然还可以控制全局依赖。
+							</p>
+							<div class="project-tags">
+								<span>Tauri</span>
+								<span>Rust</span>
+								<span>Vue.js</span>
+							</div>
+						</a>
 					</div>
 
 					<div class="project-card">
-						<div class="project-image"></div>
-						<h3>log-reporting</h3>
-						<p>
-							这个一个用于捕获前端异常的日志上报服务工具，可以帮助你快速定位问题。
-						</p>
-						<div class="project-tags">
-							<span>Typescript</span>
-							<span>Rollup</span>
-						</div>
+						<a href="https://github.com/wangxiaoze-view/HarmonyOs-App">
+							<div class="project-image">
+								<img
+									src="https://www.wangzevw.com/cdn-file/images/image.8vmywvxmg2.webp"
+									alt=""
+								/>
+							</div>
+							<h3>HarmonyOs-App</h3>
+							<p>
+								这是一个简单学习的HarmonyOs-App，当然这个项目仅仅是熟悉了一下布局，并没有做任何实际的功能。
+							</p>
+							<div class="project-tags">
+								<span>HarmonyOs</span>
+							</div>
+						</a>
+					</div>
+
+					<div class="project-card">
+						<a href="https://github.com/wangxiaoze-view/functional-helpers-lib">
+							<div class="project-image"></div>
+							<h3>functional-helpers-lib</h3>
+							<p>
+								这是一个依赖于
+								sim-admin的函数辅助工具，内置了一些常用的hooks,utils等；
+							</p>
+							<div class="project-tags">
+								<span>Vite</span>
+								<span>Typescript</span>
+							</div>
+						</a>
+					</div>
+
+					<div class="project-card">
+						<a href="https://github.com/wangxiaoze-view/log-repeorting">
+							<div class="project-image"></div>
+							<h3>log-reporting</h3>
+							<p>
+								这个一个用于捕获前端异常的日志上报服务工具，可以帮助你快速定位问题。
+							</p>
+							<div class="project-tags">
+								<span>Typescript</span>
+								<span>Rollup</span>
+							</div>
+						</a>
 					</div>
 				</div>
 			</section>
