--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				<h2>项目展示</h2>
 				<div class="projects-grid">
 					<div class="project-card">
-						<a href="https://wangzevw.com/knowledge-base/">
+						<a href="https://wangxiaoze-view.github.io/knowledge-base/">
 							<div class="project-image">
 								<img
 									src="https://wangzevw.com/cdn-file/images/image.77dlzp13h8.webp"
@@ -139,7 +139,7 @@
 						</a>
 					</div>
 					<div class="project-card">
-						<a href="https://www.wangzevw.com/sim-admin">
+						<a href="https://wangxiaoze-view.github.io/sim-admin/#/">
 							<div class="project-image">
 								<img
 									src="https://www.wangzevw.com/cdn-file/images/sim_admin.2kryz063px.webp"
@@ -158,7 +158,7 @@
 						</a>
 					</div>
 					<div class="project-card">
-						<a href="https://wangzevw.com/web-demos">
+						<a href="https://wangxiaoze-view.github.io/web-demos">
 							<div class="project-image">
 								<img
 									src="https://wangzevw.com/cdn-file/images/image.4ckxtwnq52.webp"
