docs: 添加博客链接

--- a/index.html
+++ b/index.html
@@ -10,23 +10,27 @@
 			rel="stylesheet"
 		/>
 		<script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?da07a284a6d9edb2782b563c4763bd82";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XMTLPR4SW4"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+			var _hmt = _hmt || [];
+			(function () {
+				var hm = document.createElement("script");
+				hm.src = "https://hm.baidu.com/hm.js?da07a284a6d9edb2782b563c4763bd82";
+				var s = document.getElementsByTagName("script")[0];
+				s.parentNode.insertBefore(hm, s);
+			})();
+		</script>
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=G-XMTLPR4SW4"
+		></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag("js", new Date());
 
-  gtag('config', 'G-XMTLPR4SW4');
-</script>
-
+			gtag("config", "G-XMTLPR4SW4");
+		</script>
 	</head>
 	<body>
 		<canvas id="bgCanvas"></canvas>
@@ -44,7 +48,7 @@ var _hmt = _hmt || [];
 						<!-- 这里可以放置你的照片 -->
 						<div class="profile-placeholder">
 							<img
-								src="https://www.wangzevw.com/cdn-file/images/WechatIMG646.2h8d1aigma.webp"
+								src="https://wangxiaoze-view.github.io/picx-images-hosting/images/WechatIMG646.2h8d1aigma.webp"
 								alt=""
 							/>
 						</div>
@@ -139,6 +143,24 @@ var _hmt = _hmt || [];
 				<h2>项目展示</h2>
 				<div class="projects-grid">
 					<div class="project-card">
+						<a href="https://wangxiaoze-view.github.io/blog/">
+							<div class="project-image">
+								<img
+									src="https://wangxiaoze-view.github.io/picx-images-hosting/images/image.2obohkikc2.webp"
+									alt=""
+								/>
+							</div>
+							<h3>Blog</h3>
+							<p>
+								这是在知识库的基础上搭建的hexo博客，当然后期知识库不会继续更新；
+							</p>
+							<div class="project-tags">
+								<span>Hexo</span>
+							</div>
+						</a>
+					</div>
+
+					<div class="project-card">
 						<a href="https://wangxiaoze-view.github.io/knowledge-base/">
 							<div class="project-image">
 								<img
@@ -156,11 +178,12 @@ var _hmt = _hmt || [];
 							</div>
 						</a>
 					</div>
+
 					<div class="project-card">
 						<a href="https://wangxiaoze-view.github.io/sim-admin/#/">
 							<div class="project-image">
 								<img
-									src="https://www.wangzevw.com/cdn-file/images/sim_admin.2kryz063px.webp"
+									src="https://wangxiaoze-view.github.io/picx-images-hosting/images/sim_admin.2kryz063px.webp"
 									alt=""
 								/>
 							</div>
@@ -199,7 +222,7 @@ var _hmt = _hmt || [];
 						>
 							<div class="project-image">
 								<img
-									src="https://www.wangzevw.com/cdn-file/images/image.4n7llvv3zq.webp"
+									src="https://wangxiaoze-view.github.io/picx-images-hosting/images/image.4n7llvv3zq.webp"
 									alt=""
 								/>
 							</div>
@@ -220,7 +243,7 @@ var _hmt = _hmt || [];
 						<a href="https://github.com/wangxiaoze-view/HarmonyOs-App">
 							<div class="project-image">
 								<img
-									src="https://www.wangzevw.com/cdn-file/images/image.8vmywvxmg2.webp"
+									src="https://wangxiaoze-view.github.io/picx-images-hosting/images/image.8vmywvxmg2.webp"
 									alt=""
 								/>
 							</div>
@@ -236,7 +259,12 @@ var _hmt = _hmt || [];
 
 					<div class="project-card">
 						<a href="https://github.com/wangxiaoze-view/functional-helpers-lib">
-							<div class="project-image"></div>
+							<div class="project-image">
+								<img
+									src="https://wangxiaoze-view.github.io/picx-images-hosting/images/7.2h8btdobvo.webp"
+									alt=""
+								/>
+							</div>
 							<h3>functional-helpers-lib</h3>
 							<p>
 								这是一个依赖于
@@ -251,7 +279,12 @@ var _hmt = _hmt || [];
 
 					<div class="project-card">
 						<a href="https://github.com/wangxiaoze-view/log-repeorting">
-							<div class="project-image"></div>
+							<div class="project-image">
+								<img
+									src="https://wangxiaoze-view.github.io/picx-images-hosting/images/7.2h8btdobvo.webp"
+									alt=""
+								/>
+							</div>
 							<h3>log-reporting</h3>
 							<p>
 								这个一个用于捕获前端异常的日志上报服务工具，可以帮助你快速定位问题。
