--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			gtag("config", "G-XMTLPR4SW4");
 		</script>
 		<script defer src="https://cloud.umami.is/script.js" data-website-id="81502827-f215-4db2-9026-fa822e3c583e"></script>
-		<script defer src="https://cloud.umami.is/script.js" data-website-id="63e283e0-9946-4f12-a732-c0e74a121289"></script>
+<!-- 		<script defer src="https://cloud.umami.is/script.js" data-website-id="63e283e0-9946-4f12-a732-c0e74a121289"></script> -->
 	</head>
 	<body>
 		<canvas id="bgCanvas"></canvas>
