--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		</script>
 		<script
 			async
-			src="https://www.googletagmanager.com/gtag/js?id=G-XMTLPR4SW4"
+			src="https://www.googletagmanager.com/gtag/js?id=G-KGRH7K8KQ6"
 		></script>
 		<script>
 			window.dataLayer = window.dataLayer || [];
@@ -28,7 +28,8 @@
 				dataLayer.push(arguments);
 			}
 			gtag("js", new Date());
-			gtag("config", "G-XMTLPR4SW4");
+
+			gtag("config", "G-KGRH7K8KQ6");
 		</script>
 		<script>
 			(function () {
