--- a/index.html
+++ b/index.html
@@ -232,6 +232,31 @@
 							</div>
 						</a>
 					</div>
+
+					<div class="project-card">
+						<a
+							href="https://wangxiaoze-view.github.io/playground/"
+							class="project-link"
+							data-db="playground/"
+						>
+							<div class="project-image">
+								<img
+									src="https://cdn.wangxiaoze.cn/images/%E5%BE%AE%E4%BF%A1%E6%88%AA%E5%9B%BE_20250426180417.png"
+									alt=""
+								/>
+							</div>
+							<h3>Blog</h3>
+							<p>
+								这是一款免创建项目的在线代码编辑器。
+							</p>
+							<div class="project-tags">
+								<span>Vue.js</span>
+								<span>Playground</span>
+								<span>Typescript</span>
+							</div>
+						</a>
+					</div>
+
 					<div class="project-card">
 						<a
 							href="https://wangxiaoze-view.github.io/web-demos"
